--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "api-server",
   "version": "0.0.1",
   "description": "Backend server for the QR Code Password Manager",
-  "main": "index.js",
-    "scripts": {  
-    "test": "node test.js"  
+  "main": "server.js",
+  "scripts": {
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/QRcodePasswordManager/API-Server/issues"
   },
-  "homepage": "https://github.com/QRcodePasswordManager/API-Server#readme"
+  "homepage": "https://github.com/QRcodePasswordManager/API-Server#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
